# yans2021-hackathon

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: dataset.py  export.py  final_submission.py  model.py  parse_shinra2019.py  predict.py  predict.sh  train.py  train.sh  util.py
src/dataset/: ner.py  pseudo.py  shinra.py
